--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-WikiBooks - projekt na pracê dyplomow¹.
+WikiBooks - projekt na prace dyplomowa
 
-Technologie:
+Wykorzystane technologie:
 * JavaServer Faces 2.0
 * Hibernate 1.17
 * PrimaFaces 3.50
